src/components/header/Header.css
header {
	font-size: 75px;
	font-weight: 600;
	margin-top: 35px;
}

.header {
	font-family: "Montserrat", sans-serif;
	border-top: #202020 solid 2px;
	border-bottom: #202020 solid 2px;
	margin-top: 30px;
}

.name,
.title {
	position: relative;
	top: 20%;
	margin: 60px 80px 5px 0;
	white-space: nowrap;
	overflow: hidden;
	transform: translateY(-50%);
}

.title {
	padding-bottom: 8px;
	font-size: 45px;
	font-weight: 400;
}

.typewriter-anime {
	animation: typewriter 4s steps(44) 1s 1 normal both,
		blinkTextCursor 500ms steps(44) infinite normal;
}

.typewriter-anime2 {
	animation: typewriter 4s steps(44) 3s 1 normal both,
		blinkTextCursor 500ms steps(44) infinite normal;
}

@keyframes typewriter {
	from {
		width: 0;
	}
	to {
		width: 24em;
	}
}
@keyframes blinkTextCursor {
	from {
		border-right-color: rgba(255, 255, 255, 0.75);
	}
	to {
		border-right-color: transparent;
	}
}

@media only screen and (min-device-width: 413px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
	.header {
		width: 68%;
	}
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
	.header {
		margin-left: 50px;
		width: 92%;
	}

	.typewriter-anime2 {
		margin-top: 10px;
	}

	* {
		-webkit-animation: none !important;
		-moz-animation: none !important;
		-o-animation: none !important;
		-ms-animation: none !important;
		animation: none !important;
	}
}

